src/objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Card_Operational_System_ID__c</fullName>
        <externalId>true</externalId>
        <label>Card Operational System ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Middle</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Extra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Price_Books</fullName>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>PRICEBOOK2.DESCRIPTION</columns>
        <columns>PRICEBOOK2.LAST_UPDATE</columns>
        <columns>PRICEBOOK2.IS_ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Price Books</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>